# cpp_math_lib

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  DocumentationGuideline.md  Doxyfile  README.md  dependencies.cmake  simdcheck.cmake
docs/html/: _alias_tests_8cpp.html  _alias_tests_8cpp.js  _alias_tests_8cpp_source.html  _arithmetic_operation_tests_8cpp.html  _arithmetic_operation_tests_8cpp.js  _arithmetic_operation_tests_8cpp_source.html  _boolean_bit_operation_tests_8cpp.html  _boolean_bit_operation_tests_8cpp.js  _boolean_bit_operation_tests_8cpp_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _comparison_tests_8cpp.html  _comparison_tests_8cpp.js  _comparison_tests_8cpp_source.html  _doxygen_groups_8h_source.html  _equality_tests_8cpp.html  _equality_tests_8cpp.js  _equality_tests_8cpp_source.html  _formulas.dvi  _formulas_dark.dvi  _magnitude_tests_8cpp.html  _magnitude_tests_8cpp.js  _magnitude_tests_8cpp_source.html  _matrix2_d_tests_8cpp.html  _matrix2_d_tests_8cpp.js  _matrix2_d_tests_8cpp_source.html  _matrix3_d_tests_8cpp.html  _matrix3_d_tests_8cpp.js  _matrix3_d_tests_8cpp_source.html  _matrix4_d_tests_8cpp.html  _matrix4_d_tests_8cpp.js  _matrix4_d_tests_8cpp_source.html  _product_tests_8cpp.html  _product_tests_8cpp.js  _product_tests_8cpp_source.html  _projection_tests_8cpp.html  _projection_tests_8cpp.js  _projection_tests_8cpp_source.html  _register_type_tests_8cpp.html  _register_type_tests_8cpp.js  _register_type_tests_8cpp_source.html  (+71 more)
docs/html/search/: all_10.js  all_13.js  all_15.js  all_17.js  all_5.js  all_e.js  functions_c.js  functions_e.js  functions_f.js  groups_1.js  groups_b.js  searchdata.js
docs/latex/: _alias_tests_8cpp.tex  _alias_tests_8cpp_source.tex  _arithmetic_operation_tests_8cpp.tex  _arithmetic_operation_tests_8cpp_source.tex  _boolean_bit_operation_tests_8cpp.tex  _boolean_bit_operation_tests_8cpp_source.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _comparison_tests_8cpp.tex  _comparison_tests_8cpp_source.tex  _doxygen_groups_8h_source.tex  _equality_tests_8cpp.tex  _equality_tests_8cpp_source.tex  _magnitude_tests_8cpp.tex  _magnitude_tests_8cpp_source.tex  _matrix2_d_tests_8cpp.tex  _matrix2_d_tests_8cpp_source.tex  _matrix3_d_tests_8cpp.tex  _matrix3_d_tests_8cpp_source.tex  _matrix4_d_tests_8cpp.tex  _matrix4_d_tests_8cpp_source.tex  _product_tests_8cpp.tex  _product_tests_8cpp_source.tex  _projection_tests_8cpp.tex  _projection_tests_8cpp_source.tex  _register_type_tests_8cpp.tex  _register_type_tests_8cpp_source.tex  _type_conversion_tests_8cpp.tex  _type_conversion_tests_8cpp_source.tex  _vector2_d_tests_8cpp.tex  _vector2_d_tests_8cpp_source.tex  _vector3_d_tests_8cpp.tex  _vector3_d_tests_8cpp_source.tex  class_vector4_d_comparison.tex  group___f_g_m___vec4___access.tex  group___f_g_m___vec4___addition.tex  group___f_g_m___vec4___alias.tex  group___f_g_m___vec4___bool___bit.tex  group___f_g_m___vec4___division.tex  group___f_g_m___vec4___g_t___comp.tex  group___f_g_m___vec4___g_t_e___comp.tex  (+18 more)
math-lib/: CMakeLists.txt
math-lib/include/: Config.h  DoxygenGroups.h  MathTraits.h  SimdTraits.h  Vector2D.h  Vector2D.tpp  Vector3D.h  Vector3D.tpp  Vector4D.h  Vector4D.tpp
math-lib/include/common/: Config.h  Constants.h  OperationStatus.h
math-lib/include/matrix/: Matrix2D.h  Matrix2D.tpp  Matrix3D.h  Matrix3D.tpp  Matrix4D.h  Matrix4D.tpp
math-lib/include/vector/: Vector2D.h  Vector2D.tpp  Vector3D.h  Vector3D.tpp  Vector4D.h  Vector4D.tpp
math-lib/src/: Vector3D.cpp
math-test/: CMakeLists.txt
math-test/src/: Vector3DTests.cpp
math-test/src/matrix/: Matrix2DTests.cpp  Matrix3DTests.cpp  Matrix4DTests.cpp
math-test/src/utils/: MatrixUtils.h  VectorUtils.h
math-test/src/vector/: Vector2DTests.cpp  Vector3DTests.cpp  Vector4DTests.cpp
math-test/src/vectors/: Vector2DTests.cpp  Vector3DTests.cpp  Vector4DTests.cpp
playground/: CMakeLists.txt  main.cpp
simd/: CMakeLists.txt
simd/include/: SIMD.h  SIMDUtils.h
test-harness/: CMakeLists.txt
test-harness/src/matrix/: Matrix2DTests.cpp
test-harness/src/utils/: VectorUtils.h
test-suite/: CMakeLists.txt
test-suite/include/: DoxygenGroups.h  SIMDTestSetup.h  Vector3DTestSetup.h  Vector4DTestSetup.h
test-suite/include/utils/: FloatEquals.h  MatrixUtils.h  VectorUtils.h
test-suite/src/matrix/: Matrix2DTests.cpp  Matrix3DTests.cpp  Matrix4DTests.cpp
test-suite/src/simd/: InitializationTests.cpp  RegisterTypeTests.cpp  SimdUtilsTests.cpp
test-suite/src/utils/: VectorUtils.h
test-suite/src/vector/: Vector4DTests.cpp
test-suite/src/vectors/: Vector2DTests.cpp  Vector3DTests.cpp
test-suite/src/vectors/vector3d/: AccessAndMutationTests.cpp  InitializationTests.cpp
test-suite/src/vectors/vector4d/: AccessAndMutationTests.cpp  AccessorTests.cpp  AliasTests.cpp  ArithmeticOperationTests.cpp  BooleanBitOperationTests.cpp  ComparisonTests.cpp  ConstantsTests.cpp  EqualityTests.cpp  GeometricTests.cpp  InitializationTests.cpp  MagnitudeTests.cpp  NormalizationTests.cpp  ProductTests.cpp  ProjectionTests.cpp  RejectionTests.cpp  StringRepresentationTests.cpp  TypeConversionTests.cpp
